# StarSummary

./: .gitignore  README.md  STAR_SUMMARY_SPEC.md  pyproject.toml  requirements.txt
deploy/: setup.sh  starsummary-bot.service  update.sh
src/star_summary/: __init__.py  bot.py  cli.py  config.py  models.py  utils.py  web.py
src/star_summary/downloader/: __init__.py  base.py  local.py  ytdlp.py
src/star_summary/summarizer/: __init__.py  base.py  deepseek.py
src/star_summary/transcriber/: __init__.py  base.py  paraformer.py  whisper_local.py
