[project]
name = "star-summary"
version = "0.2.0"
description = "StarSummary (星语) - Video/Audio → Transcript → Summary"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.20.0",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
whisper = ["faster-whisper>=1.0.0"]
summarize = ["openai>=1.0.0"]
all = ["faster-whisper>=1.0.0", "openai>=1.0.0"]

[project.scripts]
starsummary = "star_summary.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/star_summary"]
