[project]
name = "star-summary"
version = "0.2.0"
description = "StarSummary (星语) - Video/Audio → Transcript → Summary"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.20.0",
    "gradio>=6.6.0",
    "openai>=1.0.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
whisper = ["faster-whisper>=1.0.0"]

[project.scripts]
starsummary = "star_summary.cli:main"
starsummary-web = "star_summary.web:main"
starsummary-bot = "star_summary.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/star_summary"]
